feat: improve nav links

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -26,17 +26,45 @@
 }
 
 :root {
-  --surface-body: #f3f4f6;
+  --accent-color-50: #eefff4;
+  --accent-color-100: #d7ffe8;
+  --accent-color-200: #b2ffd2;
+  --accent-color-300: #76ffb0;
+  --accent-color-400: #33f587;
+  --accent-color-500: #09de65;
+  --accent-color-600: #00a849;
+  --accent-color-700: #049142;
+  --accent-color-800: #0a7138;
+  --accent-color-900: #0a5d30;
+  --accent-color-950: #003418;
+
+  --stone-color-50: oklch(98.5% 0.001 106.423);
+  --stone-color-100: oklch(97% 0.001 106.424);
+  --stone-color-200: oklch(92.3% 0.003 48.717);
+  --stone-color-300: oklch(86.9% 0.005 56.366);
+  --stone-color-400: oklch(70.9% 0.01 56.259);
+  --stone-color-500: oklch(55.3% 0.013 58.071);
+  --stone-color-600: oklch(44.4% 0.011 73.639);
+  --stone-color-700: oklch(37.4% 0.01 67.558);
+  --stone-color-800: oklch(26.8% 0.007 34.298);
+  --stone-color-900: oklch(21.6% 0.006 56.043);
+  --stone-color-950: oklch(14.7% 0.004 49.25);
+}
+
+:root {
+  --surface-body: #ffffff;
   --surface-panel: #ffffff;
   --surface-panel-border: rgba(15, 23, 42, 0.08);
   --surface-panel-shadow: 0 10px 20px rgba(15, 23, 42, 0.08);
   --color-text-primary: var(--vt-c-text-light-1);
-  --color-nav-bg: rgba(243, 244, 246, 0.85);
-  --color-nav-link: #1f2937;
-  --color-nav-link-hover-border: rgba(17, 24, 39, 0.2);
-  --color-nav-link-active-bg: #111827;
-  --color-nav-link-active-text: #f8fafc;
-  --color-focus: #3b82f6;
+  --color-nav-bg: var(--stone-color-100);
+  --color-nav-link: var(--accent-color-950);
+  --color-nav-link-hover-bg: var(--stone-color-200);
+  --color-nav-link-active-bg-g0: var(--accent-color-400);
+  --color-nav-link-active-bg-g100: var(--accent-color-300);
+  --color-nav-link-active-text: var(--accent-color-950);
+  --color-nav-link-active-hover-bg: var(--accent-color-300);
+  --color-focus:  var(--accent-color-950);
 }
 
 :root[data-theme='dark'] {
@@ -45,12 +73,13 @@
   --surface-panel-border: rgba(148, 163, 184, 0.2);
   --surface-panel-shadow: 0 15px 35px rgba(2, 6, 23, 0.9);
   --color-text-primary: var(--vt-c-text-dark-1);
-  --color-nav-bg: rgba(2, 6, 23, 0.8);
-  --color-nav-link: #e2e8f0;
-  --color-nav-link-hover-border: rgba(148, 163, 184, 0.6);
-  --color-nav-link-active-bg: #38bdf8;
-  --color-nav-link-active-text: #0f172a;
-  --color-focus: #38bdf8;
+  --color-nav-bg: var(--accent-color-950);
+  --color-nav-link: var(--accent-color-50);
+  --color-nav-link-hover-bg: var(--accent-color-900);
+  --color-nav-link-active-bg: var(--accent-color-400);
+  --color-nav-link-active-text: #041f0f;
+  --color-nav-link-active-hover-bg: var(--accent-color-300);
+  --color-focus: #0fa74a;
 }
 
 *,
