feat: ajout de la headline

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -21,7 +21,7 @@
   --vt-c-text-dark-2: #cbd5f5;
 
   --section-gap: 160px;
-  --font-family-base: 'Segoe UI', system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;
+  --font-family-base: 'Martian Mono', system-ui, 'Helvetica Neue', sans-serif;
   --transition-theme: 0.25s ease;
 }
 
