--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -13,3 +13,27 @@ img {
   height: auto;
   display: block;
 }
+
+h1 {
+  font-family: 'Mango Grotesque';
+  font-weight: 900;
+  line-height: 80%;
+  text-transform: uppercase;
+  font-size: 35vw;
+  color: var(--stone-color-200);
+}
+
+h2 {
+  font-family: 'Mango Grotesque';
+  font-weight: 600px;
+  font-size: 74px;
+  line-height: 64px;
+}
+
+section {
+  padding: 2rem 0;
+}
+
+section h2 {
+  text-align: center;
+}
