--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -26,29 +26,29 @@
 }
 
 :root {
-  --accent-color-50: #F7FEE7;
-  --accent-color-100: #ECFCCA;
-  --accent-color-200: #D8F999;
-  --accent-color-300: #BBF451;
-  --accent-color-400: #9AE600;
-  --accent-color-500: #7CCE00;
-  --accent-color-600: #5EA500;
-  --accent-color-700: #497D00;
-  --accent-color-800: #3C6300;
-  --accent-color-900: #35530E;
-  --accent-color-950: #192E03;
+  --accent-50: #f7fee7; --accent-50-25: rgba(247, 254, 231, 0.25);
+  --accent-100: #ECFCCA;
+  --accent-200: #D8F999;
+  --accent-300: #BBF451;
+  --accent-400: #9AE600;
+  --accent-500: #7CCE00;
+  --accent-600: #5EA500;
+  --accent-700: #497D00;
+  --accent-800: #3C6300;
+  --accent-900: #35530E;
+  --accent-950: rgb(25, 46, 3); --accent-950-10: rgba(25, 46, 3, 0.1);
 
-  --stone-color-50: #FAFAF9;
-  --stone-color-100: #F5F5F4;
-  --stone-color-200: #E7E5E4;
-  --stone-color-300: #D6D3D1;
-  --stone-color-400: #A6A09B;
-  --stone-color-500: #79716B;
-  --stone-color-600: #57534D;
-  --stone-color-700: #44403B;
-  --stone-color-800: #292524;
-  --stone-color-900: #1C1917;
-  --stone-color-950: #0C0A09;
+  --stone-50: #fafaf9; --stone-50-25: rgba(250, 250, 249, 0.25);
+  --stone-100: #F5F5F4;
+  --stone-200: #E7E5E4;
+  --stone-300: #D6D3D1;
+  --stone-400: #A6A09B;
+  --stone-500: #79716B;
+  --stone-600: #57534D;
+  --stone-700: #44403B;
+  --stone-800: #292524;
+  --stone-900: #1C1917;
+  --stone-950: #0c0a09; --stone-950-25: rgba(12, 10, 9, 0.25); --stone-950-40: rgba(12, 10, 9, 0.4);
 }
 
 :root {
@@ -57,14 +57,23 @@
   --surface-panel-border: rgba(15, 23, 42, 0.08);
   --surface-panel-shadow: 0 10px 20px rgba(15, 23, 42, 0.08);
   --color-text-primary: var(--vt-c-text-light-1);
-  --color-nav-bg: var(--stone-color-100);
-  --color-nav-link: var(--accent-color-950);
-  --color-nav-link-hover-bg: var(--stone-color-200);
-  --color-nav-link-active-bg-g0: var(--accent-color-400);
-  --color-nav-link-active-bg-g100: var(--accent-color-300);
-  --color-nav-link-active-text: var(--accent-color-950);
-  --color-nav-link-active-hover-bg: var(--accent-color-300);
-  --color-focus:  var(--accent-color-950);
+
+  --nav-bg: linear-gradient(45deg, var(--stone-800) 0%, var(--stone-700) 100%);
+  --nav-shadow: 
+    inset -3px 0 2px 1px var(--stone-50-25),
+    inset 0 3px 2px 1px var(--stone-50-25),
+    inset 3px 0 2px 1px var(--stone-950-40),
+    inset 0 -3px 2px 1px var(--stone-950-40),
+    -2px 2px 3px -2px var(--stone-950-25),
+    -1px 2px 20px 0 var(--stone-950-25);
+  --nav-link-color: var(--stone-400);
+  --nav-link-color-active: var(--accent-800);
+  --nav-handle-bg: linear-gradient(45deg, var(--accent-400) 0%, var(--accent-200) 100%);
+  --nav-handle-shadow: inset 0 3px 2px 1px var(--accent-50-25),
+  inset -3px 0 2px 1px var(--accent-50-25),
+  inset 0 -3px 2px 1px var(--accent-950-10),
+  inset 3px 0 2px 1px var(--accent-950-10);
+  
 }
 
 :root[data-theme='dark'] {
@@ -87,6 +96,7 @@
 *::after {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-weight: normal;
 }
 
