--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,6 +31,14 @@ h2 {
   margin-bottom: 0.5rem;
 }
 
+h3 {
+  font-family: 'Mango Grotesque';
+  font-weight: bold;
+  font-size: 64px;
+  line-height: 56px;
+  text-transform: uppercase;
+}
+
 section {
   padding: 2rem 0;
 }
